--- a/style.css
+++ b/style.css
@@ -17,8 +17,10 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 7px 10px;
+    padding: 6px 10px;
     background-color: cornflowerblue;
+    position: sticky;
+    top: 0;
 }
 
 .nav-left, .nav-right {
@@ -28,7 +30,7 @@ nav {
 
 .nav-logo img {
     height: 2.5rem;
-    margin-left: 0.7rem;
+    margin-left: 0.7rem;     
 }
 
 .nav-items {
@@ -56,9 +58,27 @@ nav {
     font-family: 'Raleway', sans-serif;
 }
 
+.nav-right .login-signup {
+    padding: 5px 10px;
+    margin: 3px;
+    border-radius: 0.9rem;
+    transition: all 0.15s linear;
+}
+
+.nav-right .login-signup:hover {
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+}
+
 .nav-user img {
     height: 2rem;
     border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    transition: all .15s linear;
+}
+
+.nav-user img:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
 }
 
 header {
@@ -84,4 +104,64 @@ header {
     font-family: 'Bebas Neue', serif;
     font-size: 1.5rem;
     margin: 0;
+}
+
+.header-text p span {
+    color: #A4A4A4;
+}
+
+.drum-components-section {
+    background-color: #FFF8F3;
+    padding: 0 115px;
+}
+
+.drum-components-section .section-title h1 {
+    font-size: 2rem;
+    font-weight: 700;
+    font-family: 'Bebas Neue', serif;
+    text-align: center;
+    margin: 30px 10px;
+}
+
+.component-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.component-card {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border: 1px solid #000;
+    max-width: 600px;
+    margin: 10px 0;
+}
+
+.component-card img {
+    height: 120px;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+.component-card-description {
+    flex: 1;
+    width: auto;
+}
+
+.component-card-description h2 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    color: #000;
+}
+
+.component-card-description p {
+    font-size: 1rem;
+    color: #000;
+    text-align: justify;
+    line-height: 1.5;
 }
