--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ header {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(img/Header\ Hero\ Image.jpg);
     background-size: cover;
     background-position: center;
-    height: 60vh;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -164,4 +164,29 @@ header {
     color: #000;
     text-align: justify;
     line-height: 1.5;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding: 15px 0;
+    background-color: #666666; 
+}
+
+.footer-top {
+    display: flex;
+    align-items: center;
+}
+
+.footer-top a, h3 {
+    margin: 0 7px;
+    font-family: 'Raleway', sans-serif;
+}
+
+.footer-separator {
+    width: 20%;
+    border-color: black;
 }
