--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 5px 10px;
-    background-color: cornflowerblue;
+    background-color: #FFDBB5;
     position: sticky;
     top: 0;
 }
@@ -111,8 +111,8 @@ header {
 }
 
 .drum-components-section {
-    background-color: #FFF8F3;
-    padding: 0 115px;
+    background-color: #aaa9ad;
+    padding: 10px 115px;
 }
 
 .drum-components-section .section-title h1 {
