--- a/about.css
+++ b/about.css
@@ -18,7 +18,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 5px 10px;
-    background-color: cornflowerblue;
+    background-color: #FFDBB5;
     position: sticky;
     top: 0;
 }
@@ -125,7 +125,7 @@ main {
     padding: 20px;
     border: solid 1px #010101;
     border-radius: 1rem;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
 .socials-container {
@@ -136,7 +136,7 @@ main {
     background-color: white;
     border: solid 1px #010101;
     border-radius: 5rem;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);    
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);    
 }
 
 .socials-container a {
